# RM2019SummerCamp

./: .gitignore  LICENSE  README.md  calib_odom.txt  init.sh  init_all_manifold2.launch
Algorithm/: Readme.txt
Documentation/: README.md
Documentation/LatexPPT/: RM.aux  RM.bbl  RM.blg  RM.nav  RM.out  RM.snm  RM.tex  RM.toc  ref.bib
Documentation/src/: FinalSolution.md  SoftwareLog.md  Solution.md  Summary.md
Embedded/Base Framework/: Tempate.uvguix.Administrator  Tempate.uvguix.Hasee  Tempate.uvguix.Robomaster  Tempate.uvguix.blx  Tempate.uvoptx  Tempate.uvprojx  keilkilll.bat
Embedded/kalmanFilter/: Kalman.cpp  Kalman.h
RCBigAlgo/: search.cpp
RCBigAlgo/RCBigQtAlgo/: RCBigQtAlgo.pro  game.h  game_thread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  visualwidget.h
RCBigAlgo/RCBigQtAlgo-HumanUI/: mainwindow.cpp
RCBigAlgo/catkin_ws/: catkin_ws.workspace.user.525c093  (+1 more)
Script/: README.md  apriltag_fullmap_gen.py  assessment.txt  findchildrenpid.sh  line.sh  review_gen.py  setupAll.sh  setupCAN.sh  setupController.launch  setupNodes.launch  setupVision.launch  unknown_script
System/catkin_ws/src/localization/: CMakeLists.txt  odom_update_node.cpp  package.xml
System/catkin_ws/src/localization/launch/: sc_localization.launch
locomotion_ws/src/cubic_planner/: CMakeLists.txt  global_planner.cpp  local_planner.cpp  package.xml
locomotion_ws/src/cubic_planner/launch/: planner.launch  simulator.launch
locomotion_ws/src/cubic_planner/rviz/: summer_camp.rviz
locomotion_ws/src/cubic_planner/simulator/: summer_camp.world
locomotion_ws/src/simple_planner/: CMakeLists.txt  global_planner.cpp  local_planner.cpp  utility.h
locomotion_ws/src/simple_planner/cubic_spline/: cubic_spline_ros.h
locomotion_ws/src/simple_planner/launch/: planner.launch
locomotion_ws/src/simple_planner/simulator/: bg.pgm  summer_camp.pgm  summer_camp.world  summer_camp.yaml
(+378 files in other folders)
